Correction taille des activités et version tablette corrigée.

--- a/style.css
+++ b/style.css
@@ -355,7 +355,8 @@ main, header {
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
-    height: 640px;
+    height: 590px;
+    margin-top: 40px;
 }
 
 /*  Style de la div qui regroupes les liens des activités */
@@ -365,7 +366,7 @@ main, header {
     flex-wrap: wrap;
     justify-content: space-between;
     width: 100%;
-    height: 600px;
+    height: 540px;
     margin: 0;
 }
 
@@ -396,6 +397,20 @@ main, header {
     height: 100%;
     width: 100%;
     object-fit: cover;
+}
+
+/* Taille des activités */
+#activity2 {
+    height: 300px;
+}
+#activity3 {
+    height: 200px;
+}
+#activity5 {
+    height: 230px;
+}
+#activity6 {
+    height: 270px;
 }
 
 /* ---------------------------- FOOTER ----------------------------- */
@@ -436,7 +451,7 @@ li:hover {
 
 /********************* Version tablette ****************************/
 
-@media screen and (max-width: 1380px) {
+@media screen and (max-width: 1400px) {
     h1 {
         font-size: 23px;
     }
@@ -478,11 +493,11 @@ li:hover {
         height: auto;
     }
     #activityCity {
-        height: 100%;
+        height: auto;
         flex-direction: row;
         justify-content: center;
     }
-    .activityLinks {
+    .activityLinks, #activity2,#activity3,#activity5,#activity6 {
         width: 45%;
         height: 350px;
         margin: 13px;
@@ -645,7 +660,7 @@ li:hover {
     }
 
     /*********** Hébergement et Activités *************/
-    .hostingLinks, .activityLinks {
+    .hostingLinks, .activityLinks, #activity2,#activity3,#activity5,#activity6 {
         height: 200px;
         width: 100%;
     }
